--- a/tutorial-part-four/package.json
+++ b/tutorial-part-four/package.json
@@ -17,6 +17,7 @@
     "@emotion/core": "^10.0.28",
     "gatsby": "^2.21.0",
     "gatsby-plugin-emotion": "^4.3.0",
+    "gatsby-plugin-typography": "^2.5.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-typography": "^0.16.19",
