--- a/tutorial-part-four/package.json
+++ b/tutorial-part-four/package.json
@@ -17,6 +17,7 @@
     "@emotion/core": "^10.0.28",
     "gatsby": "^2.21.0",
     "gatsby-plugin-emotion": "^4.3.0",
+    "gatsby-plugin-offline": "^3.2.1",
     "gatsby-plugin-typography": "^2.5.0",
     "gatsby-source-filesystem": "^2.3.1",
     "gatsby-transformer-remark": "^2.8.6",
